Fixed alignment issues

--- a/frontend/resources/assets/sass/app.scss
+++ b/frontend/resources/assets/sass/app.scss
@@ -76,5 +76,5 @@ $line-height-base: 1.8;
 }
 
 .main-content {
-    margin-top: 5rem;
+    margin-top: 2.5rem;
 }
